--- a/Extension/ASD.ESH/packages.config
+++ b/Extension/ASD.ESH/packages.config
@@ -8,11 +8,16 @@
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.3.1" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.ComponentModelHost" version="15.0.26606" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26606" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.Editor" version="15.0.26606" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26606" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6071" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Text.Data" version="15.0.26606" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Text.Logic" version="15.0.26606" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Text.UI" version="15.0.26606" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.0.26606" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26607" targetFramework="net47" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.1.192" targetFramework="net47" developmentDependency="true" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
