--- a/Extension/ASD.ESH/ASD.ESH.csproj
+++ b/Extension/ASD.ESH/ASD.ESH.csproj
@@ -47,7 +47,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Classification\ClassificationTypes.cs" />
+    <Compile Include="Classification\ClassificationRegistry.cs" />
     <Compile Include="Classification\Classifier.cs" />
     <Compile Include="Classification\ClassifierProvider.cs" />
     <Compile Include="Classification\ClassifierDocument.cs" />
