--- a/Extension/ASD.ESH/packages.config
+++ b/Extension/ASD.ESH/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="14.0.23205" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Language.StandardClassification" version="14.0.23205" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Text.Data" version="14.0.23205" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Text.Logic" version="14.0.23205" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Text.UI" version="14.0.23205" targetFramework="net46" />
