--- a/Extension/ASD.ESH/packages.config
+++ b/Extension/ASD.ESH/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.EditorFeatures.Text" version="1.0.1" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="14.0.23205" targetFramework="net46" />
