--- a/Extension/ASD.ESH/packages.config
+++ b/Extension/ASD.ESH/packages.config
@@ -1,18 +1,67 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.0.1" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.1" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.EditorFeatures.Text" version="1.0.1" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.0.1" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.1" targetFramework="net46" />
-  <package id="Microsoft.Composition" version="1.0.27" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.CoreUtility" version="14.0.23205" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Language.StandardClassification" version="14.0.23205" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="14.0.23205" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Logic" version="14.0.23205" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.UI" version="14.0.23205" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="14.0.23205" targetFramework="net46" />
-  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net46" />
-  <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.EditorFeatures.Text" version="2.8.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.8.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.8.0" targetFramework="net46" />
+  <package id="Microsoft.Composition" version="1.0.31" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.26930" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Language.StandardClassification" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.17" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.7.18" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.7.18" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.53" targetFramework="net46" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net46" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
+  <package id="System.Composition" version="1.1.0" targetFramework="net46" />
+  <package id="System.Composition.AttributedModel" version="1.1.0" targetFramework="net46" />
+  <package id="System.Composition.Convention" version="1.1.0" targetFramework="net46" />
+  <package id="System.Composition.Hosting" version="1.1.0" targetFramework="net46" />
+  <package id="System.Composition.Runtime" version="1.1.0" targetFramework="net46" />
+  <package id="System.Composition.TypedParts" version="1.1.0" targetFramework="net46" />
+  <package id="System.Console" version="4.3.1" targetFramework="net46" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
+  <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net46" />
+  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net46" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net46" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net46" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net46" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net46" />
+  <package id="System.Reflection.Metadata" version="1.5.0" targetFramework="net46" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net46" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net46" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net46" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Text.Encoding.CodePages" version="4.4.0" targetFramework="net46" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net46" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net46" />
+  <package id="System.Threading.Thread" version="4.3.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net46" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net46" />
+  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net46" />
+  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net46" />
 </packages>
